camera cannot pass the walls and the changing the view will store the last position  and orientation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
 		"*.tcc": "cpp",
 		"iomanip": "cpp",
 		"istream": "cpp",
-		"ostream": "cpp"
+		"ostream": "cpp",
+		"chrono": "cpp",
+		"cmath": "cpp"
 	}
 }
